--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,15 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+# Fichiers pas utilisé par le projet.
+Decomposition_regles.ipynb
+Pseudo_code.py
+test_Yvette_fonctions.py
+Yvette_fonctions_a_tester.py
+
 
 # C extensions
 *.so
-
 
 
 # Distribution / packaging
