--- a/.gitignore
+++ b/.gitignore
@@ -7,17 +7,18 @@ __pycache__/
 *.py[cod]
 *$py.class
 
-
+# Fichiers non-utilisés dans le projet.
+Decomposition_regles.ipynb
+Pseudo_code.py
+test_Yvette_fonctions.py
+Yvette_fonctions_a_tester.py
 
 # C extensions
 *.so
 
 
 # Distribution / packaging
-Decomposition_regles.ipynb
-Pseudo_code.py
-test_Yvette_fonctions.py
-Yvette_fonctions_a_tester.py
+
 .Python
 build/
 develop-eggs/
